<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="user"
            type="com.example.rafaltekielskilayoutsandactions.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="writeToLogCut"
            android:text="@string/write_to_logcat"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_write_to_logcat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/write_to_logcat_listener"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnShowToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/show_toast"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_write_something"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint='@{user.firstName + " " + user.lastName}'
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_write_to_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/write_to_textview"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/update_user_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="first name"
            android:hint="@string/first_name"
            android:inputType="text"
            android:text='@{user.firstName}'
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnUpdateUserFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/update_user_first_name"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/update_user_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints="last name"
            android:hint="@string/last_name"
            android:inputType="text"
            android:text='@{user.lastName}'
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnUpdateUserLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/update_user_last_name"
            android:textSize="30sp" />


    </LinearLayout>
</layout>